[gd_scene load_steps=18 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_ARVRCamera.tscn" type="PackedScene" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_LeftController.tscn" type="PackedScene" id=2]
[ext_resource path="res://OQ_Toolkit/OQ_RightController.tscn" type="PackedScene" id=3]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Feature_VRSimulator.tscn" type="PackedScene" id=4]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin.tscn" type="PackedScene" id=5]
[ext_resource path="res://avatarassets/mozillabasic/AvatarBot_base_for_export_altbody.glb" type="PackedScene" id=6]
[ext_resource path="res://Main.gd" type="Script" id=7]
[ext_resource path="res://doppelganger.gd" type="Script" id=8]
[ext_resource path="res://Feature_HubsAvatar.tscn" type="PackedScene" id=9]
[ext_resource path="res://avatarassets/readyplayerme_halfbody/readyplayerme_halfbody.glb" type="PackedScene" id=10]
[ext_resource path="res://OQ_Toolkit/OQ_Interactables/OQ_ButtonPressable.tscn" type="PackedScene" id=11]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.976471, 0.00784314, 0.00784314, 1 )

[sub_resource type="SphereMesh" id=2]
material = SubResource( 1 )
radius = 0.02
height = 0.04

[sub_resource type="QuadMesh" id=3]
size = Vector2( 10, 10 )

[sub_resource type="OpenSimplexNoise" id=4]
period = 29.5

[sub_resource type="NoiseTexture" id=5]
noise = SubResource( 4 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.952941, 0.54902, 0.113725, 1 )
albedo_texture = SubResource( 5 )

[node name="Main" type="Spatial"]
script = ExtResource( 7 )
vrenabled = false

[node name="OQ_ARVROrigin" parent="." instance=ExtResource( 5 )]

[node name="OQ_ARVRCamera" parent="OQ_ARVROrigin" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.20248, 1.8, -1.03535 )
fov = 67.9

[node name="OQ_LeftController" parent="OQ_ARVROrigin" instance=ExtResource( 2 )]
visible = false

[node name="OQ_RightController" parent="OQ_ARVROrigin" instance=ExtResource( 3 )]
visible = false

[node name="Feature_VRSimulator" parent="OQ_ARVROrigin" instance=ExtResource( 4 )]
info_label_visible = false

[node name="Feature_HubsAvatar" parent="OQ_ARVROrigin" instance=ExtResource( 9 )]

[node name="AvatarBot_base_for_export_altbody" parent="OQ_ARVROrigin/Feature_HubsAvatar" instance=ExtResource( 6 )]

[node name="readyplayerme_halfbody" parent="OQ_ARVROrigin/Feature_HubsAvatar" instance=ExtResource( 10 )]
visible = false

[node name="smarker" type="MeshInstance" parent="OQ_ARVROrigin/Feature_HubsAvatar"]
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="FloorMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 6 )

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.9 )

[node name="readyplayerme_halfbody" parent="Spatial" instance=ExtResource( 10 )]
script = ExtResource( 8 )

[node name="smarker" type="MeshInstance" parent="Spatial/readyplayerme_halfbody"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 3.54387e-07, 0, -1.08761 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="Spatial2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.685, 0, 0.9 )

[node name="Hubsbot" parent="Spatial2" instance=ExtResource( 6 )]
script = ExtResource( 8 )

[node name="smarker" type="MeshInstance" parent="Spatial2/Hubsbot"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, -0.684553, 0, -1.08761 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="OQ_ButtonPressable" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 1.49012e-08, 0, 0, 1, -5.96046e-08, 0, 0, 1, 0, 1.69639, -0.461764 )
